--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "body-parser": "^1.8.0",
     "express": "^4.8.8",
-    "mongod": "^1.3.0",
-    "mongodb": "^1.4.10"
+    "moment": "^2.8.3"
   }
 }
