--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "economics",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/economicAnalysis/econ-server.git"
+  },
   "description": "Calculate Ahead of the Curve charts",
   "main": "server.js",
   "scripts": {
@@ -11,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.8.0",
     "express": "^4.8.8",
-    "moment": "^2.8.3"
+    "mongod": "^1.3.0",
+    "mongodb": "^1.4.18"
   }
 }
