--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.8.0",
     "express": "^4.8.8",
-    "mongod": "^1.3.0"
+    "mongod": "^1.3.0",
+    "mongodb": "^1.4.19"
   }
 }
